<resources>
    <string name="app_name">Angielski</string>
    <string name="text_1">Angielskie Słówka</string>
    <string name="button_1">Nauka</string>
    <string name="button_repeating">Powtórki</string>
    <string name="text_2">Podaj Słówko</string>
    <string name="learning_today">Nauczone dzisiaj:</string>
    <string name="learning_all">Cały kurs:</string>
    <string name="scroll_view">Scroll View</string>

    <string name="about_app_title">O Aplikacji</string>
    <string name="about_app_text"> Aplikacja umożliwiająca efektywną nauke słówek.
        Zawiera system powtórek słówek, aby utrwalić zdobytą wiedzę.
        Staraj się skojarzyć dane słówko z jakimś obrazem, a następnie wyobrazić sobie wymyślony obraz z jego znaczeniem.
        Przykład: Słówko forest - las. Wyobraź sobie tytułowego bohatera filmu "Forrest Gump" biegnącego przez las i potykającego się o przewrócone drzewo.
        Dobrze jest też wypowiedzieć w tej sytuacji polskie i angielskie znaczenie słówka. Pamiętaj też, że śmieszne historyjki lepiej zapisują się w pamięci. </string>




    <string name="Text_3">Pierwsza Kolumna</string>
    <string name="Text_4">Druga Kolumna</string>
    <string name="button_4">Zapisz</string>

    <string name="word_photot">Obraz pokazujący słówko</string>
    <string name="next_world">Sprawdź</string>
    <string name="plain_text_1">Podaj Tłumaczenie...</string>
    <string name="continue_1">Kontynuj</string>
    <string name="sound">Dźwięk</string>
    <string name="image_desc">Obrazek</string>
    <string name="button_i_don_know">Nie Wiem</string>
    <string name="button_finish_lesson">Zakończ Lekcje</string>
    <string name="button_settings">Ustawienia</string>
    <string name="button_about_app">O Aplikacji</string>

    <string name="settings_describ">Ustawienia</string>
    <string name="minute">m</string>
    <string name="hour">h</string>
    <string name="day">d</string>
    <string name="year">y</string>


</resources>