<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/settings_describ">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/button_settings"
                android:textSize="34sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="5dp"
                    android:text="Słówka:"
                    android:textSize="24sp" />

                <EditText
                    android:id="@+id/editTextWord"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="number"
                    tools:ignore="TouchTargetSizeCheck" />

            </LinearLayout>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:padding="5dp"
                android:text="Czas powtórek:"
                android:textSize="24sp" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="5dp"
                    android:text="1."
                    android:textSize="24sp" />

                <EditText
                    android:id="@+id/editText_1"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="10"
                    android:inputType="textPersonName"
                    android:minHeight="48dp"
                    tools:ignore="DuplicateSpeakableTextCheck"
                    android:autofillHints="" />

                <RadioButton
                    android:id="@+id/radioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hour"
                    tools:ignore="DuplicateSpeakableTextCheck,TouchTargetSizeCheck" />

                <RadioButton
                    android:id="@+id/radioButton2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/minute"
                    tools:ignore="TouchTargetSizeCheck,DuplicateSpeakableTextCheck" />

                <RadioButton
                    android:id="@+id/radioButton4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/day"
                    tools:ignore="TouchTargetSizeCheck,DuplicateSpeakableTextCheck" />

                <RadioButton
                    android:id="@+id/radioButton5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/minute"
                    tools:ignore="TouchTargetSizeCheck" />

            </RadioGroup>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textRepeat_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="5dp"
                    android:text="2."
                    android:textSize="24sp" />

                <EditText
                    android:id="@+id/editText_2"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="10"
                    android:inputType="textPersonName"
                    android:minHeight="48dp"
                    android:autofillHints="" />

                <RadioButton
                    android:id="@+id/radioButton_2_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hour"
                    tools:ignore="TouchTargetSizeCheck" />

                <RadioButton
                    android:id="@+id/radioButton2_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/minute"
                    tools:ignore="TouchTargetSizeCheck" />

                <RadioButton
                    android:id="@+id/radioButton2_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/day"
                    tools:ignore="TouchTargetSizeCheck" />

                <RadioButton
                    android:id="@+id/radioButton2_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/minute"
                    tools:ignore="TouchTargetSizeCheck" />

            </RadioGroup>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textRepeat_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="5dp"
                    android:text="3."
                    android:textSize="24sp" />

                <EditText
                    android:id="@+id/editText_3"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="10"
                    android:inputType="textPersonName"
                    android:minHeight="48dp"
                    android:autofillHints="" />

                <RadioButton
                    android:id="@+id/radioButton_3_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hour"
                    tools:ignore="TouchTargetSizeCheck" />

                <RadioButton
                    android:id="@+id/radioButton3_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/minute"
                    tools:ignore="TouchTargetSizeCheck" />

                <RadioButton
                    android:id="@+id/radioButton3_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/day"
                    tools:ignore="TouchTargetSizeCheck" />

                <RadioButton
                    android:id="@+id/radioButton3_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/minute"
                    tools:ignore="TouchTargetSizeCheck" />

            </RadioGroup>

            <Button
                android:id="@+id/buttonSave"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="ZAPISZ" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>